[package]
name = "ranked-db-converter"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
itertools = "0.14.0"
mcsr-ranked-api = "0.6.4"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "chrono", "uuid"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
uuid = "1.21.0"
